[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/scripts/draggable.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 0, 0 )

[node name="draggable" type="Node2D"]
z_index = 6
script = ExtResource( 1 )

[node name="__area__" type="Area2D" parent="."]

[node name="__shape__" type="CollisionShape2D" parent="__area__"]
z_index = 261
z_as_relative = false
shape = SubResource( 1 )

[connection signal="input_event" from="__area__" to="." method="_on___area___input_event"]
[connection signal="mouse_entered" from="__area__" to="." method="_on___area___mouse_entered"]
[connection signal="mouse_exited" from="__area__" to="." method="_on___area___mouse_exited"]
